--- a/style.css
+++ b/style.css
@@ -5,8 +5,44 @@
 }
 
 header{
-    position: fixed;
-    top: 0%;
-    width: 100%;
     z-index: 100;
+    width: 100%;
+    padding: 5%;
+    margin: 0;   
+}
+
+#headertext {
+    margin: 0%;
+}
+
+h1 {
+    margin-top: 0%;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100px 300px 200px 200px;
+}
+
+.first {
+    grid-column: 3;
+    background-color: #ff70a5;
+    margin: 0%
+}
+
+.second {
+    grid-column: 3;
+    background-color: #ffd6e4;
+    margin: 0%;
+    padding: 5%
+}
+
+.card {
+    background-color: #ffffff;
 }
